--- a/Rider/src/app/home/home.page.scss
+++ b/Rider/src/app/home/home.page.scss
@@ -1,9 +1,7 @@
 capacitor-google-maps {
-  display: inline-block;
+  display: block;
   width: 100%;
   height: 100%;
-  border-radius: 15px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 @keyframes slide-top {
@@ -68,7 +66,6 @@ ion-content {
   --padding-bottom: 0;
   position: relative;
   --background: transparent;
-  margin-top: 20px;
 }
 
 ion-footer {
@@ -170,8 +167,11 @@ ion-footer {
 
 .map {
   width: 100%;
-  height: 1204px;
-  padding-bottom: 0%
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
 }
 
 // Modern Card Styling for Selection Bar
